--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="about-image">
-      <img src="images/me.jpg" alt="Yana portrait">
+      <img src="images/me.JPG" alt="Yana portrait">
     </div>
   </section>
 
