--- a/mywork.html
+++ b/mywork.html
@@ -27,28 +27,28 @@
       <img src="images/pinecity.png" alt="Project 1">
       <h2>Pine City Zoo</h2>
       <p>This app was created during my FNB App Academy participation with IT Varsity. It shows a map of the zoo, the animals, the places in the zoo, the weather and has a feedback page.</p>
-      <a href="Pine City Zoo/index.html" class="btn">View Project</a>
+      <a href="https://yanamakan.github.io/pine-city-zoo/" class="btn">View Project</a>
     </div>
 
     <div class="portfolio-item">
       <img src="images/calculator.jpg" alt="Project 2">
       <h2>Calculator</h2>
       <p>A simple and basic calculator at beginner level.</p>
-      <a href="calcul/calculator.html" class="btn">View Project</a>
+      <a href="https://yanamakan.github.io/calculator/" class="btn">View Project</a>
     </div>
 
     <div class="portfolio-item">
       <img src="images/superhero.png" alt="Project 3">
       <h2>Superheroes</h2>
       <p>This app was created during my FNB App Academy participation with IT varsity which shows informatin about The Avengers.</p>
-      <a href="Superhero app/index.html" class="btn">View Project</a>
+      <a href="https://yanamakan.github.io/superheroes/index.html" class="btn">View Project</a>
     </div>
 
     <div class="portfolio-item">
       <img src="images/3.png" alt="Project 1">
       <h2>My Diary App</h2>
       <p>A way to keep track of your thoughts on the go. Also includes motivational quotes to keep you going.</p>
-      <a href="App 1/index.html" class="btn">View Project</a>
+      <a href="https://yanamakan.github.io/diary-app/" class="btn">View Project</a>
     </div>
 
   </section>
