--- a/resume.html
+++ b/resume.html
@@ -57,14 +57,14 @@
       </ul>
     </div>
 
-    <!-- <div class="section">
-      <h2>Services</h2>
+    <div class="section">
+      <h2>Experience</h2>
       <ul>
-        <li>✔️ Personal & Brand Websites</li>
-        <li>✔️ Landing Pages for Product Launches</li>
-        <li>✔️ Full-Stack Web App Development</li>
+        <li>TechXplo Mentorship Program 2025</li>
+<!--         <li>✔️ Landing Pages for Product Launches</li>
+        <li>✔️ Full-Stack Web App Development</li> -->
       </ul>
-    </div> -->
+    </div>
 
     <div class="section">
       <h2>Education</h2>
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
